parser.out
Grammar:

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> DEVICES CMDS
Rule 2     PROGRAM -> DEVICES
Rule 3     DEVICES -> DEVICE DEVICES
Rule 4     DEVICES -> DEVICE
Rule 5     DEVICE -> device : { namedevice , observation }
Rule 6     DEVICE -> device : { namedevice }
Rule 7     CMDS -> CMD . CMDS
Rule 8     CMDS -> CMD .
Rule 9     CMD -> ACT
Rule 10    CMD -> ATTRIB
Rule 11    CMD -> OBSACT
Rule 12    ATTRIB -> set observation = VAR
Rule 13    ACT -> ACTION namedevice
Rule 14    ACT -> enviar alerta ( msg ) namedevice
Rule 15    ACT -> enviar alerta ( msg , observation ) namedevice
Rule 16    ACT -> enviar alerta ( msg ) para todos : NAME
Rule 17    OBSACT -> se OBS entao ACT
Rule 18    OBSACT -> se OBS entao ACT senao ACT
Rule 19    OBS -> observation oplogic VAR
Rule 20    OBS -> observation oplogic VAR & & OBS
Rule 21    ACTION -> action
Rule 22    NAME -> namedevice
Rule 23    NAME -> namedevice , NAME
Rule 24    VAR -> number
Rule 25    VAR -> boolean

Terminals, with rules where they appear:

&                    : 20 20
(                    : 14 15 16
)                    : 14 15 16
,                    : 5 15 23
.                    : 7 8
:                    : 5 6 16
=                    : 12
action               : 21
alerta               : 14 15 16
boolean              : 25
device               : 5 6
entao                : 17 18
enviar               : 14 15 16
error                : 
msg                  : 14 15 16
namedevice           : 5 6 13 14 15 22 23
number               : 24
observation          : 5 12 15 19 20
oplogic              : 19 20
para                 : 16
se                   : 17 18
senao                : 18
set                  : 12
todos                : 16
{                    : 5 6
}                    : 5 6

Nonterminals, with rules where they appear:

ACT                  : 9 17 18 18
ACTION               : 13
ATTRIB               : 10
CMD                  : 7 8
CMDS                 : 1 7
DEVICE               : 3 4
DEVICES              : 1 2 3
NAME                 : 16 23
OBS                  : 17 18 20
OBSACT               : 11
PROGRAM              : 0
VAR                  : 12 19 20


state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . DEVICES CMDS
    (2) PROGRAM -> . DEVICES
    (3) DEVICES -> . DEVICE DEVICES
    (4) DEVICES -> . DEVICE
    (5) DEVICE -> . device : { namedevice , observation }
    (6) DEVICE -> . device : { namedevice }
    device          shift and go to state 4

    PROGRAM                        shift and go to state 1
    DEVICES                        shift and go to state 2
    DEVICE                         shift and go to state 3

state 1

    (0) S' -> PROGRAM .


state 2

    (1) PROGRAM -> DEVICES . CMDS
    (2) PROGRAM -> DEVICES .
    (7) CMDS -> . CMD . CMDS
    (8) CMDS -> . CMD .
    (9) CMD -> . ACT
    (10) CMD -> . ATTRIB
    (11) CMD -> . OBSACT
    (13) ACT -> . ACTION namedevice
    (14) ACT -> . enviar alerta ( msg ) namedevice
    (15) ACT -> . enviar alerta ( msg , observation ) namedevice
    (16) ACT -> . enviar alerta ( msg ) para todos : NAME
    (12) ATTRIB -> . set observation = VAR
    (17) OBSACT -> . se OBS entao ACT
    (18) OBSACT -> . se OBS entao ACT senao ACT
    (21) ACTION -> . action
    $end            reduce using rule 2 (PROGRAM -> DEVICES .)
    enviar          shift and go to state 11
    set             shift and go to state 12
    se              shift and go to state 13
    action          shift and go to state 14

    CMDS                           shift and go to state 5
    CMD                            shift and go to state 6
    ACT                            shift and go to state 7
    ATTRIB                         shift and go to state 8
    OBSACT                         shift and go to state 9
    ACTION                         shift and go to state 10

state 3

    (3) DEVICES -> DEVICE . DEVICES
    (4) DEVICES -> DEVICE .
    (3) DEVICES -> . DEVICE DEVICES
    (4) DEVICES -> . DEVICE
    (5) DEVICE -> . device : { namedevice , observation }
    (6) DEVICE -> . device : { namedevice }
    enviar          reduce using rule 4 (DEVICES -> DEVICE .)
    set             reduce using rule 4 (DEVICES -> DEVICE .)
    se              reduce using rule 4 (DEVICES -> DEVICE .)
    action          reduce using rule 4 (DEVICES -> DEVICE .)
    $end            reduce using rule 4 (DEVICES -> DEVICE .)
    device          shift and go to state 4

    DEVICE                         shift and go to state 3
    DEVICES                        shift and go to state 15

state 4

    (5) DEVICE -> device . : { namedevice , observation }
    (6) DEVICE -> device . : { namedevice }
    :               shift and go to state 16


state 5

    (1) PROGRAM -> DEVICES CMDS .
    $end            reduce using rule 1 (PROGRAM -> DEVICES CMDS .)


state 6

    (7) CMDS -> CMD . . CMDS
    (8) CMDS -> CMD . .
    .               shift and go to state 17


state 7

    (9) CMD -> ACT .
    .               reduce using rule 9 (CMD -> ACT .)


state 8

    (10) CMD -> ATTRIB .
    .               reduce using rule 10 (CMD -> ATTRIB .)


state 9

    (11) CMD -> OBSACT .
    .               reduce using rule 11 (CMD -> OBSACT .)


state 10

    (13) ACT -> ACTION . namedevice
    namedevice      shift and go to state 18


state 11

    (14) ACT -> enviar . alerta ( msg ) namedevice
    (15) ACT -> enviar . alerta ( msg , observation ) namedevice
    (16) ACT -> enviar . alerta ( msg ) para todos : NAME
    alerta          shift and go to state 19


state 12

    (12) ATTRIB -> set . observation = VAR
    observation     shift and go to state 20


state 13

    (17) OBSACT -> se . OBS entao ACT
    (18) OBSACT -> se . OBS entao ACT senao ACT
    (19) OBS -> . observation oplogic VAR
    (20) OBS -> . observation oplogic VAR & & OBS
    observation     shift and go to state 22

    OBS                            shift and go to state 21

state 14

    (21) ACTION -> action .
    namedevice      reduce using rule 21 (ACTION -> action .)


state 15

    (3) DEVICES -> DEVICE DEVICES .
    enviar          reduce using rule 3 (DEVICES -> DEVICE DEVICES .)
    set             reduce using rule 3 (DEVICES -> DEVICE DEVICES .)
    se              reduce using rule 3 (DEVICES -> DEVICE DEVICES .)
    action          reduce using rule 3 (DEVICES -> DEVICE DEVICES .)
    $end            reduce using rule 3 (DEVICES -> DEVICE DEVICES .)


state 16

    (5) DEVICE -> device : . { namedevice , observation }
    (6) DEVICE -> device : . { namedevice }
    {               shift and go to state 23


state 17

    (7) CMDS -> CMD . . CMDS
    (8) CMDS -> CMD . .
    (7) CMDS -> . CMD . CMDS
    (8) CMDS -> . CMD .
    (9) CMD -> . ACT
    (10) CMD -> . ATTRIB
    (11) CMD -> . OBSACT
    (13) ACT -> . ACTION namedevice
    (14) ACT -> . enviar alerta ( msg ) namedevice
    (15) ACT -> . enviar alerta ( msg , observation ) namedevice
    (16) ACT -> . enviar alerta ( msg ) para todos : NAME
    (12) ATTRIB -> . set observation = VAR
    (17) OBSACT -> . se OBS entao ACT
    (18) OBSACT -> . se OBS entao ACT senao ACT
    (21) ACTION -> . action
    $end            reduce using rule 8 (CMDS -> CMD . .)
    enviar          shift and go to state 11
    set             shift and go to state 12
    se              shift and go to state 13
    action          shift and go to state 14

    CMD                            shift and go to state 6
    CMDS                           shift and go to state 24
    ACT                            shift and go to state 7
    ATTRIB                         shift and go to state 8
    OBSACT                         shift and go to state 9
    ACTION                         shift and go to state 10

state 18

    (13) ACT -> ACTION namedevice .
    .               reduce using rule 13 (ACT -> ACTION namedevice .)
    senao           reduce using rule 13 (ACT -> ACTION namedevice .)


state 19

    (14) ACT -> enviar alerta . ( msg ) namedevice
    (15) ACT -> enviar alerta . ( msg , observation ) namedevice
    (16) ACT -> enviar alerta . ( msg ) para todos : NAME
    (               shift and go to state 25


state 20

    (12) ATTRIB -> set observation . = VAR
    =               shift and go to state 26


state 21

    (17) OBSACT -> se OBS . entao ACT
    (18) OBSACT -> se OBS . entao ACT senao ACT
    entao           shift and go to state 27


state 22

    (19) OBS -> observation . oplogic VAR
    (20) OBS -> observation . oplogic VAR & & OBS
    oplogic         shift and go to state 28


state 23

    (5) DEVICE -> device : { . namedevice , observation }
    (6) DEVICE -> device : { . namedevice }
    namedevice      shift and go to state 29


state 24

    (7) CMDS -> CMD . CMDS .
    $end            reduce using rule 7 (CMDS -> CMD . CMDS .)


state 25

    (14) ACT -> enviar alerta ( . msg ) namedevice
    (15) ACT -> enviar alerta ( . msg , observation ) namedevice
    (16) ACT -> enviar alerta ( . msg ) para todos : NAME
    msg             shift and go to state 30


state 26

    (12) ATTRIB -> set observation = . VAR
    (24) VAR -> . number
    (25) VAR -> . boolean
    number          shift and go to state 32
    boolean         shift and go to state 33

    VAR                            shift and go to state 31

state 27

    (17) OBSACT -> se OBS entao . ACT
    (18) OBSACT -> se OBS entao . ACT senao ACT
    (13) ACT -> . ACTION namedevice
    (14) ACT -> . enviar alerta ( msg ) namedevice
    (15) ACT -> . enviar alerta ( msg , observation ) namedevice
    (16) ACT -> . enviar alerta ( msg ) para todos : NAME
    (21) ACTION -> . action
    enviar          shift and go to state 11
    action          shift and go to state 14

    ACT                            shift and go to state 34
    ACTION                         shift and go to state 10

state 28

    (19) OBS -> observation oplogic . VAR
    (20) OBS -> observation oplogic . VAR & & OBS
    (24) VAR -> . number
    (25) VAR -> . boolean
    number          shift and go to state 32
    boolean         shift and go to state 33

    VAR                            shift and go to state 35

state 29

    (5) DEVICE -> device : { namedevice . , observation }
    (6) DEVICE -> device : { namedevice . }
    ,               shift and go to state 36
    }               shift and go to state 37


state 30

    (14) ACT -> enviar alerta ( msg . ) namedevice
    (15) ACT -> enviar alerta ( msg . , observation ) namedevice
    (16) ACT -> enviar alerta ( msg . ) para todos : NAME
    )               shift and go to state 38
    ,               shift and go to state 39


state 31

    (12) ATTRIB -> set observation = VAR .
    .               reduce using rule 12 (ATTRIB -> set observation = VAR .)


state 32

    (24) VAR -> number .
    .               reduce using rule 24 (VAR -> number .)
    &               reduce using rule 24 (VAR -> number .)
    entao           reduce using rule 24 (VAR -> number .)


state 33

    (25) VAR -> boolean .
    .               reduce using rule 25 (VAR -> boolean .)
    &               reduce using rule 25 (VAR -> boolean .)
    entao           reduce using rule 25 (VAR -> boolean .)


state 34

    (17) OBSACT -> se OBS entao ACT .
    (18) OBSACT -> se OBS entao ACT . senao ACT
    .               reduce using rule 17 (OBSACT -> se OBS entao ACT .)
    senao           shift and go to state 40


state 35

    (19) OBS -> observation oplogic VAR .
    (20) OBS -> observation oplogic VAR . & & OBS
    entao           reduce using rule 19 (OBS -> observation oplogic VAR .)
    &               shift and go to state 41


state 36

    (5) DEVICE -> device : { namedevice , . observation }
    observation     shift and go to state 42


state 37

    (6) DEVICE -> device : { namedevice } .
    device          reduce using rule 6 (DEVICE -> device : { namedevice } .)
    enviar          reduce using rule 6 (DEVICE -> device : { namedevice } .)
    set             reduce using rule 6 (DEVICE -> device : { namedevice } .)
    se              reduce using rule 6 (DEVICE -> device : { namedevice } .)
    action          reduce using rule 6 (DEVICE -> device : { namedevice } .)
    $end            reduce using rule 6 (DEVICE -> device : { namedevice } .)


state 38

    (14) ACT -> enviar alerta ( msg ) . namedevice
    (16) ACT -> enviar alerta ( msg ) . para todos : NAME
    namedevice      shift and go to state 43
    para            shift and go to state 44


state 39

    (15) ACT -> enviar alerta ( msg , . observation ) namedevice
    observation     shift and go to state 45


state 40

    (18) OBSACT -> se OBS entao ACT senao . ACT
    (13) ACT -> . ACTION namedevice
    (14) ACT -> . enviar alerta ( msg ) namedevice
    (15) ACT -> . enviar alerta ( msg , observation ) namedevice
    (16) ACT -> . enviar alerta ( msg ) para todos : NAME
    (21) ACTION -> . action
    enviar          shift and go to state 11
    action          shift and go to state 14

    ACT                            shift and go to state 46
    ACTION                         shift and go to state 10

state 41

    (20) OBS -> observation oplogic VAR & . & OBS
    &               shift and go to state 47


state 42

    (5) DEVICE -> device : { namedevice , observation . }
    }               shift and go to state 48


state 43

    (14) ACT -> enviar alerta ( msg ) namedevice .
    .               reduce using rule 14 (ACT -> enviar alerta ( msg ) namedevice .)
    senao           reduce using rule 14 (ACT -> enviar alerta ( msg ) namedevice .)


state 44

    (16) ACT -> enviar alerta ( msg ) para . todos : NAME
    todos           shift and go to state 49


state 45

    (15) ACT -> enviar alerta ( msg , observation . ) namedevice
    )               shift and go to state 50


state 46

    (18) OBSACT -> se OBS entao ACT senao ACT .
    .               reduce using rule 18 (OBSACT -> se OBS entao ACT senao ACT .)


state 47

    (20) OBS -> observation oplogic VAR & & . OBS
    (19) OBS -> . observation oplogic VAR
    (20) OBS -> . observation oplogic VAR & & OBS
    observation     shift and go to state 22

    OBS                            shift and go to state 51

state 48

    (5) DEVICE -> device : { namedevice , observation } .
    device          reduce using rule 5 (DEVICE -> device : { namedevice , observation } .)
    enviar          reduce using rule 5 (DEVICE -> device : { namedevice , observation } .)
    set             reduce using rule 5 (DEVICE -> device : { namedevice , observation } .)
    se              reduce using rule 5 (DEVICE -> device : { namedevice , observation } .)
    action          reduce using rule 5 (DEVICE -> device : { namedevice , observation } .)
    $end            reduce using rule 5 (DEVICE -> device : { namedevice , observation } .)


state 49

    (16) ACT -> enviar alerta ( msg ) para todos . : NAME
    :               shift and go to state 52


state 50

    (15) ACT -> enviar alerta ( msg , observation ) . namedevice
    namedevice      shift and go to state 53


state 51

    (20) OBS -> observation oplogic VAR & & OBS .
    entao           reduce using rule 20 (OBS -> observation oplogic VAR & & OBS .)


state 52

    (16) ACT -> enviar alerta ( msg ) para todos : . NAME
    (22) NAME -> . namedevice
    (23) NAME -> . namedevice , NAME
    namedevice      shift and go to state 55

    NAME                           shift and go to state 54

state 53

    (15) ACT -> enviar alerta ( msg , observation ) namedevice .
    .               reduce using rule 15 (ACT -> enviar alerta ( msg , observation ) namedevice .)
    senao           reduce using rule 15 (ACT -> enviar alerta ( msg , observation ) namedevice .)


state 54

    (16) ACT -> enviar alerta ( msg ) para todos : NAME .
    .               reduce using rule 16 (ACT -> enviar alerta ( msg ) para todos : NAME .)
    senao           reduce using rule 16 (ACT -> enviar alerta ( msg ) para todos : NAME .)


state 55

    (22) NAME -> namedevice .
    (23) NAME -> namedevice . , NAME
    .               reduce using rule 22 (NAME -> namedevice .)
    senao           reduce using rule 22 (NAME -> namedevice .)
    ,               shift and go to state 56


state 56

    (23) NAME -> namedevice , . NAME
    (22) NAME -> . namedevice
    (23) NAME -> . namedevice , NAME
    namedevice      shift and go to state 55

    NAME                           shift and go to state 57

state 57

    (23) NAME -> namedevice , NAME .
    .               reduce using rule 23 (NAME -> namedevice , NAME .)
    senao           reduce using rule 23 (NAME -> namedevice , NAME .)
